--- a/01 Data Cleaning/Python/Web scraped data cleaning/Python Web Scraped Data Cleaning.ipynb
+++ b/01 Data Cleaning/Python/Web scraped data cleaning/Python Web Scraped Data Cleaning.ipynb
@@ -5,10 +5,14 @@
    "id": "559bd7d0-db3a-49ba-a87d-71f9e34384a3",
    "metadata": {},
    "source": [
-    "# Web scraped data cleaning using python\n",
+    "# Web scraped data cleaning from ToScrape.com\n",
+    "---\n",
+    "Data cleaning using Python: \n",
     "\n",
-    "Author: [Masud Rahman](masud90.github.io)\n",
-    "This project will scrape a website (with permission) for dataset, clean them, and produce an output."
+    "- Author: Masud Rahman - https://masud90.github.io\n",
+    "- Dataset: https://books.toscrape.com . This website allows data scraping for tutorial purposes.\n",
+    "\n",
+    "This project will scrape a website (with permission) for dataset, clean them, and produce a clean file ready for analysis."
    ]
   },
   {
@@ -21,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "c4c5e71b-5528-4946-884a-9d63f8c5c65b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "84110bd5-df49-429f-b1a8-215018ec6b40",
    "metadata": {},
    "outputs": [
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "48a1d5c2-4ced-4226-b04a-c3a83fa87d19",
    "metadata": {},
    "outputs": [
@@ -196,7 +200,7 @@
        "4  Sapiens: A Brief History of Humankind  £54.23     In stock"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "47f6b77d-1d03-4a16-a199-1963796fba22",
    "metadata": {},
    "outputs": [
@@ -291,7 +295,7 @@
        "4  Sapiens: A Brief History of Humankind  54.23     In stock"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "f20a9aa5-ef36-48b1-ab3a-4906e63bb39b",
    "metadata": {},
    "outputs": [
@@ -348,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "706812eb-dc3c-4c0e-9bf6-97dcbea9b4be",
    "metadata": {},
    "outputs": [
